src-tauri/tests/snapshots/ipc_contract__bootstrap_status_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "message": "Booting Libp2p Swarm...",
  "phase": "PHASE_3_NETWORK",
  "progress": 70
}
