src-tauri/tests/snapshots/ipc_contract__command_inventory.snap
---
source: tests/ipc_contract.rs
---
analyze_pdf_content
apply_relay_boost
approve_voucher
buy_listing
can_spawn_processes
check_rpc_reachable
create_asset_listing
create_escrow
delete_wallet_snapshot
enable_instant_session
extract_pdf_text
generate_zk_proof
get_active_asset_listings
get_bridge_status
get_content
get_escrow_status
get_identity
get_my_deals
get_ollama_status
get_ollama_url
get_owned_vouchers
get_pending_relay_txs
get_primary_private_key
get_received_content
get_relay_boost
get_relay_stats
get_relayed_history
get_voucher_owner
get_wallet_snapshot
import_wallet
kill_switch
logout_wallet
mark_relay_tx_status
match_intent_to_listings
mint_voucher
prune_stale_relay_txs
receive_content
record_relay_bytes
record_relayed_tx
redeem_voucher
refund_deal
refund_escrow
release_deal
release_escrow
send_intent_to_mesh
set_ollama_url
sign_content
store_content
submit_raw_transaction
sync_blockchain_state
