src-tauri/tests/snapshots/ipc_contract__compressed_asset_shape_without_proof.snap
---
source: tests/ipc_contract.rs
---
{
  "id": "asset-2",
  "amount": "0",
  "symbol": "USDC",
  "owner": "0x0000000000000000000000000000000000000000",
  "proof": null
}
