src-tauri/tests/snapshots/ipc_contract__content_analysis_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "content_type": "invoice",
  "is_real_document": true,
  "reasoning": "structured fields present"
}
