src-tauri/tests/snapshots/ipc_contract__match_result_shape.snap
---
source: tests/ipc_contract.rs
---
{
  "listing_id": 7,
  "seller": "0xfF8dd6dbB7B97b44044573cFE843dE1F463637a9",
  "description": "AI compute credit",
  "price_avax": "0.05",
  "price_wei": "50000000000000000",
  "token_id": 42,
  "reason": "matches intent and is under the ceiling"
}
